# Slapp

./: CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  slapp.yml
.github/workflows/: python-package.yml
slapp/: commands.py  config.py  constants.py  main.py  utils.py  version.py
tests/: test_slapp.py
